:up_arrow: Technology upgrade: Java 11 and Gradle 5.1
* Upgraded dependencies Jackson, Jersey.
* Upgraded Gradle to 5.1 and various plugins to their respective latest
  versions
* Improved Jackson to use parameter name metadata